[gd_scene load_steps=4 format=3 uid="uid://7sfrsqefjccc"]

[ext_resource type="Script" uid="uid://bms8xoy657ati" path="res://main_menu.gd" id="1_wfu82"]
[ext_resource type="PackedScene" uid="uid://d2nw1q3jhlaty" path="res://loader.tscn" id="2_xdp1u"]
[ext_resource type="PackedScene" uid="uid://bmiivt013oy0u" path="res://map_generation.tscn" id="3_56kej"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wfu82")

[node name="Continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = 72.5
offset_right = 47.5
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
text = "CONTINUE"

[node name="NewGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = 168.5
offset_right = 47.5
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2
text = "NEW GAME"

[node name="LoadMap" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = 120.5
offset_right = 47.5
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
text = "LOAD MAP"

[node name="Loader" parent="." instance=ExtResource("2_xdp1u")]
visible = false
layout_mode = 1
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0

[node name="MapGeneration" parent="." instance=ExtResource("3_56kej")]
visible = false
layout_mode = 1
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 889.0
offset_top = 763.0
offset_right = 1034.0
offset_bottom = 794.0
text = "TEST ENCOUNTER"

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="LoadMap" to="." method="_on_load_map_pressed"]
